--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/color-mode": "^3.3.2",
     "@nuxtjs/supabase": "^1.1.6",
     "@nuxtjs/tailwindcss": "^6.11.4",
+    "date-fns": "^3.3.1",
     "nuxt-icon": "^0.6.8",
     "zod": "^3.22.4"
   }
